# FalconnPP

./: BF.cpp  BF.h  BuildIndex.cpp  BuildIndex.h  CMakeLists.txt  Compile.sh  Falconn++.cpp  FalconnCEOs.cbp  FalconnCEOs.depend  FalconnCEOs.layout  FindKNN.cpp  FindKNN.h  Header.cpp  Header.h  InputParser.cpp  InputParser.h  README.md  Readme  Test.cpp  Test.h  Utilities.cpp  Utilities.h  fht_avx.c  hnswlib.h  setup.py  space_ip.h
.github/workflows/: conda.yml  wheels.yml
paper/: MIT.pptx
python/: python_wrapper.cpp
src/: BF.cpp  BF.h  FalconnPP.cpp  FalconnPP.h  Header.h  InputParser.cpp  InputParser.h  Utilities.cpp  Utilities.h  fht.h  fht_impl.h  fht_sse.c  main.cpp
test/: falconnpp.py
test/test-g++/: Compile.sh  FalconnPP
